스핀락 - Sleep 활용한 3가지 방법

--- a/Lock/Lock.vcxproj
+++ b/Lock/Lock.vcxproj
@@ -131,6 +131,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="SpinLock.h" />
+    <ClInclude Include="SpinLock_With_Sleep.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
