--- a/Lock/Lock.vcxproj.filters
+++ b/Lock/Lock.vcxproj.filters
@@ -23,5 +23,8 @@
     <ClInclude Include="SpinLock.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="SpinLock_With_Sleep.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
