Event활용, 조건변수(Conditional Variable) 활용

--- a/Lock/Lock.vcxproj
+++ b/Lock/Lock.vcxproj
@@ -130,6 +130,8 @@
     <ClCompile Include="Lock.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="ConditionVariable.h" />
+    <ClInclude Include="EventMutex.h" />
     <ClInclude Include="SpinLock.h" />
     <ClInclude Include="SpinLock_With_Sleep.h" />
   </ItemGroup>
