락 베이스로 만든 큐와 스택

--- a/Lock/Lock.vcxproj
+++ b/Lock/Lock.vcxproj
@@ -132,6 +132,8 @@
   <ItemGroup>
     <ClInclude Include="ConditionVariable.h" />
     <ClInclude Include="EventMutex.h" />
+    <ClInclude Include="LockBasedQueue.h" />
+    <ClInclude Include="LockBasedStack.h" />
     <ClInclude Include="SpinLock.h" />
     <ClInclude Include="SpinLock_With_Sleep.h" />
   </ItemGroup>
