--- a/Lock/Lock.vcxproj.filters
+++ b/Lock/Lock.vcxproj.filters
@@ -32,5 +32,11 @@
     <ClInclude Include="ConditionVariable.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="LockBasedStack.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="LockBasedQueue.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
